# ddss

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: bench.yml  rust.yml
benches/: solver.rs
dev/bench/: data.js
src/: board.rs  ffi.rs  lib.rs  par.rs  play.rs  strain_flags.rs  system_info.rs  tricks.rs  vulnerability.rs
tests/: solver.rs
